# accorder

./: .env.example  .gitignore  README.md  debug_fetch.py  inspect_data.py  pyproject.toml
accorder/: __init__.py  cli.py  domain_throttle.py  extractor.py  llm_extractor.py  parser.py  retry_utils.py  schemas.py  sources.py  storage.py  validator.py
accorder/templates/: report.html.j2
